# boot-dev-http-server-rust

./: Cargo.toml
.cargo/: config.toml
chapters/chapter-1/: Cargo.toml
chapters/chapter-1/src/: main.rs  readers.rs
chapters/chapter-2-3/: Cargo.toml
chapters/chapter-2-3/src/: main.rs  readers.rs
chapters/chapter-4/: Cargo.toml  ]  simd.md
chapters/chapter-4/benches/: hasher.rs  map.rs  parse.rs
chapters/chapter-4/src/: config.rs  connection.rs  lib.rs  main.rs  readers.rs  request.rs  request_parser.rs  utils.rs
chapters/chapter-4/src/header/: common.rs  map.rs  map2.rs  mod.rs  name.rs
chapters/chapter-4/src/request/: builder.rs  header.rs  line.rs  mod.rs  parser.rs
