[package]
name = "chapter-4"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
smol = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true }
smallvec = { workspace = true }
gxhash = { workspace = true }
http = { workspace = true }
