[package]
name = "chapter-4"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
smol = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true }
arrayvec = { workspace = true }
smallvec = { workspace = true }
gxhash = { workspace = true }
rapidhash = "4.4.1"
http = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
httparse = "1.10.1"
actix-http = "3.12.0"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "map"
harness = false

[[bench]]
name = "hasher"
harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
